---------------------------------------------------------------------------
Version 5.9.0  [V5-DEVEL] (rgerhards), 2011-03-??
- this begins a new devel branch for v5
- enhanced omhdfs to support batching mode. This permits to increase
  performance, as we now call the HDFS API with much larger message
  sizes and far more infrequently
- bugfix: failover did not work correctly if repeated msg reduction was on
  affected directive was: $ActionExecOnlyWhenPreviousIsSuspended on
  closes: http://bugzilla.adiscon.com/show_bug.cgi?id=236
---------------------------------------------------------------------------
Version 5.8.0  [V5-stable] (rgerhards), 2011-04-??
- bugfix: DA queue was never shutdown once it was started
  closes: http://bugzilla.adiscon.com/show_bug.cgi?id=241
---------------------------------------------------------------------------
Version 5.7.10  [V5-BETA] (rgerhards), 2011-03-29
- bugfix: ompgsql did not work properly with ANSI SQL strings
  closes: http://bugzilla.adiscon.com/show_bug.cgi?id=229
- bugfix: rsyslog did not build with --disable-regexp configure option
  closes: http://bugzilla.adiscon.com/show_bug.cgi?id=243
- bugfix: PRI was invalid on Solaris for message from local log socket
- enhance: added $BOM system property to ease writing byte order masks
- bugfix: RFC5424 parser confused by empty structured data
  closes: http://bugzilla.adiscon.com/show_bug.cgi?id=237
- bugfix: error return from strgen caused abort, now causes action to be
  ignored (just like a failed filter)
- new sample plugin for a strgen to generate sql statement consumable
  by a database plugin
- bugfix: strgen could not be used together with database outputs
  because the sql/stdsql option could not be specified. This has been
  solved by permitting the strgen to include the opton inside its name.
  closes: http://bugzilla.adiscon.com/show_bug.cgi?id=195
---------------------------------------------------------------------------