@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------
 Version 5.9.0  [V5-DEVEL] (rgerhards), 2011-03-??
 - this begins a new devel branch for v5
+- added new config directive $InputTCPFlowControl to select if tcp
+  received messages shall be flagged as light delayable or not.
 - enhanced omhdfs to support batching mode. This permits to increase
   performance, as we now call the HDFS API with much larger message
   sizes and far more infrequently
